[package]
name = "ospine"
version = "0.1.0"
edition = "2021"
authors = ["Ospine Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://example.com/ospine"
description = "Open Source Port Interrogation & Network Enumeration (basic port scanner)"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["net", "time", "io-util", "rt-multi-thread", "macros", "sync"] }
bytes = "1.7"
thiserror = "2.0"
futures = "0.3"
ipnet = "2.9"
