[package]
name = "ospine"
version = "0.2.0"
edition = "2021"
authors = ["Ospine Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://example.com/ospine"
description = "Open Source Port Interrogation & Network Enumeration (basic port scanner)"
build = "build.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true          # (Cargo 1.70+)
panic = "abort"
incremental = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["net", "time", "io-util", "rt-multi-thread", "macros", "sync"] }
futures = "0.3"
ipnet = "2.9"
toml = "0.8"
directories = "5"
